--- a/MorphogenGL.vcxproj.filters
+++ b/MorphogenGL.vcxproj.filters
@@ -39,6 +39,9 @@
     <QtMoc Include="src\configparser.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\polarkernelplot.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\controlwidget.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\configparser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\polarkernelplot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
