--- a/MorphogenGL.vcxproj
+++ b/MorphogenGL.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="src\seed.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\blender.h" />
     <QtMoc Include="src\configparser.h" />
     <ClInclude Include="src\fbo.h" />
@@ -140,6 +141,12 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="resource.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icons\morphogengl.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
