--- a/MorphogenGL.vcxproj.filters
+++ b/MorphogenGL.vcxproj.filters
@@ -42,6 +42,9 @@
     <QtMoc Include="src\polarkernelplot.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\heart.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\controlwidget.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\polarkernelplot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\heart.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
