--- a/MorphogenGL.vcxproj.filters
+++ b/MorphogenGL.vcxproj.filters
@@ -45,6 +45,9 @@
     <QtMoc Include="src\heart.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\rgbwidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\controlwidget.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\heart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rgbwidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
