--- a/MorphogenGL.vcxproj
+++ b/MorphogenGL.vcxproj
@@ -114,15 +114,19 @@
     <ClCompile Include="src\blender.cpp" />
     <ClCompile Include="src\configparser.cpp" />
     <ClCompile Include="src\controlwidget.cpp" />
+    <ClCompile Include="src\cycle.cpp" />
+    <ClCompile Include="src\cyclesearch.cpp" />
+    <ClCompile Include="src\edge.cpp" />
     <ClCompile Include="src\fbo.cpp" />
     <ClCompile Include="src\ffmpegencoder.cpp" />
     <ClCompile Include="src\generator.cpp" />
+    <ClCompile Include="src\graphwidget.cpp" />
     <ClCompile Include="src\heart.cpp" />
     <ClCompile Include="src\imageoperations.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\morphowidget.cpp" />
+    <ClCompile Include="src\node.cpp" />
     <ClCompile Include="src\parameter.cpp" />
-    <ClCompile Include="src\pipeline.cpp" />
     <ClCompile Include="src\polarkernelplot.cpp" />
     <ClCompile Include="src\rgbwidget.cpp" />
     <ClCompile Include="src\seed.cpp" />
@@ -130,16 +134,20 @@
   <ItemGroup>
     <ClInclude Include="src\blender.h" />
     <QtMoc Include="src\configparser.h" />
+    <QtMoc Include="src\cycle.h" />
+    <ClInclude Include="src\cyclesearch.h" />
+    <QtMoc Include="src\edge.h" />
     <ClInclude Include="src\fbo.h" />
     <QtMoc Include="src\focuslineedit.h" />
     <ClInclude Include="src\ffmpegencoder.h" />
     <ClInclude Include="src\generator.h" />
     <QtMoc Include="src\heart.h" />
+    <QtMoc Include="src\graphwidget.h" />
     <ClInclude Include="src\imageoperations.h" />
     <QtMoc Include="src\morphowidget.h" />
+    <QtMoc Include="src\node.h" />
     <ClInclude Include="src\parameter.h" />
     <QtMoc Include="src\operationswidget.h" />
-    <ClInclude Include="src\pipeline.h" />
     <QtMoc Include="src\polarkernelplot.h" />
     <QtMoc Include="src\rgbwidget.h" />
     <ClInclude Include="src\seed.h" />
