--- a/MorphogenGL.vcxproj.filters
+++ b/MorphogenGL.vcxproj.filters
@@ -60,6 +60,9 @@
     <QtMoc Include="src\node.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\plotswidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\controlwidget.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\node.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\plotswidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
